@@ -93,9 +93,9 @@
         <emphasis>network-address</emphasis></term>
 
         <listitem>
-          <para>If specified, qualifies INTERFACE. It specifies a SOURCE
-          network for DNAT rules and a DESTINATON network for SNAT
-          rules.</para>
+          <para>Added in Shorewall 4.4.11. If specified, qualifies INTERFACE.
+          It specifies a SOURCE network for DNAT rules and a DESTINATON
+          network for SNAT rules.</para>
         </listitem>
       </varlistentry>
     </variablelist>
